# spall

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  plan-hasp-integration.md  spall-architecture.html  spall-design.md  spall-scaffold-prompt.md
.github/workflows/: ci.yml
.hermes/ideations/: ideate-2025-05-02-spall-post-d3.md  ideate-2026-04-28-openapi-cli-spall.md
.hermes/plans/: 2025-05-02_000000-post-d3-five-ideas.md  2026-04-28_213730-implement-repl-url-highlight.md  2026-04-28_234500-spall-ideation-subagent-execution.md  2026-04-28_spall-accepted-ideation.md
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/config/: layout.md  profiles.md  proxy.md
docs/src/getting-started/: concepts.md  first-request.md  installation.md
docs/src/operations/: arazzo.md  cli-reference.md  exit-codes.md  history.md  mcp.md  repl.md  shell-completions.md
docs/src/usage/: authentication.md  global-flags.md  making-requests.md  pagination.md  registering-apis.md  request-bodies.md  response-output.md
e2e/: smoke.sh
e2e/fixtures/arazzo/: simple-openapi.json  simple.arazzo.yaml  with-component-actions.arazzo.yaml  with-criteria.arazzo.yaml  with-goto.arazzo.yaml  with-outputs.arazzo.yaml  with-retry.arazzo.yaml
e2e/fixtures/mtls/: cert.pem  key.pem
examples/: config.toml
examples/apis/: petstore.toml
reserve/: Cargo.toml  README.md
reserve/src/: lib.rs
spall-cli/: Cargo.toml
spall-cli/src/: arazzo_runner.rs  arazzo_runner_actions.rs  chain.rs  command.rs  completions.rs  discover.rs  execute.rs  fetch.rs  filter.rs  history.rs  http.rs  links.rs  main.rs  matches.rs  output.rs  paginate.rs  preview.rs  repeat.rs  repl.rs  transport.rs  validate.rs
spall-cli/src/auth/: apikey.rs  basic.rs  bearer.rs  mod.rs  oauth2.rs
spall-cli/src/commands/: api.rs  arazzo.rs  auth.rs  history.rs  mcp.rs  mod.rs
spall-cli/src/mcp/: http.rs  mod.rs  schema.rs  verbose.rs
spall-cli/tests/: arazzo_run_e2e.rs  auth_e2e.rs  auth_hasp.rs  auth_oauth2_e2e.rs  chain_e2e.rs  discover_e2e.rs  follow_link_e2e.rs  highlight_e2e.rs  mcp_e2e.rs  mcp_verbose_e2e.rs  output_bytes_e2e.rs  output_e2e.rs  paginate_e2e.rs  redaction_audit.rs  repeat_e2e.rs  repl_e2e.rs  retry_after_e2e.rs  stream_guard_e2e.rs  url_e2e.rs  validate_e2e.rs
spall-config/: Cargo.toml
spall-config/src/: auth.rs  credentials.rs  error.rs  lib.rs  registry.rs  sources.rs
spall-config/tests/: auth_serde_test.rs  credentials_test.rs  registry_test.rs  sources_test.rs
spall-core/: Cargo.toml
spall-core/src/: cache.rs  command.rs  error.rs  extensions.rs  ir.rs  lib.rs  loader.rs  resolver.rs  validator.rs  value.rs  yaml.rs
spall-core/src/arazzo/: expressions.rs  mod.rs  model.rs  sources.rs
spall-core/tests/: arazzo_parse_test.rs  cache_roundtrip_test.rs  command_test.rs  resolver_test.rs
spall-openapi/: Cargo.toml
spall-openapi/examples/: embed.rs
spall-openapi/src/: builder.rs  datapath.rs  lib.rs  links.rs  paginate.rs  request.rs  response.rs  status.rs  stream.rs
spall-openapi/src/auth/: apikey.rs  basic.rs  bearer.rs  mod.rs  oauth2.rs
spall-openapi/tests/: stream_bound.rs
taskplane-tasks/: CONTEXT.md
taskplane-tasks/TP-001-ir-cache-core/: PROMPT.md
taskplane-tasks/TP-002-cache-integration-specindex/: PROMPT.md
taskplane-tasks/TP-003-servers-field-buildurl/: PROMPT.md
taskplane-tasks/TP-004-degraded-help-cache/: PROMPT.md
taskplane-tasks/TP-005-unit-tests-core/: PROMPT.md
