[package]
name = "spall"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Spall Contributors"]
description = "Rust-native HTTP API tooling. Part of the rustpunk portfolio."
repository = "https://github.com/rustpunk/spall"
homepage = "https://github.com/rustpunk/spall"
readme = "README.md"
keywords = ["http", "api", "cli", "rustpunk"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[workspace]
