[package]
name = "spall-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "spall"
path = "src/main.rs"

[dependencies]
spall-core = { path = "../spall-core" }
spall-config = { path = "../spall-config" }
clap = { version = "4", features = ["string"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "cookies", "socks", "query"] }
miette = { version = "7", features = ["fancy"] }
is-terminal = "0.4"
secrecy = "0.10"
serde_json = "1"
urlencoding = "2"
thiserror = "2"

[lints.rust]
unused = "allow"
