[package]
name = "spall-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "spall"
path = "src/main.rs"

[dependencies]
spall-core = { path = "../spall-core" }
spall-config = { path = "../spall-config" }
clap = { version = "4", features = ["string"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "cookies", "socks", "query"] }
miette = { version = "7", features = ["fancy"] }
is-terminal = "0.4"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
thiserror = "2"
dirs = "5"
postcard = { version = "1", features = ["alloc"] }
tabled = "0.20"
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
jmespath = "0.5"
chrono = "0.4"
base64 = "0.22"
rpassword = "7"
syntect = "5"
rustyline = "14"
shlex = "1"
hasp = { git = "https://github.com/rustpunk/hasp", default-features = false, features = ["env", "keyring", "file"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[features]
default = ["hasp"]
hasp = ["dep:hasp"]
hasp-full = [
    "hasp",
    "hasp/aws-sm",
    "hasp/aws-ssm",
    "hasp/vault",
    "hasp/op",
    "hasp/bw",
    "hasp/gcp-sm",
    "hasp/azure-kv",
]


