[package]
name = "spall-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
secrecy = "0.10"
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
