[package]
name = "spall-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openapiv3 = "2"
clap = { version = "4", features = ["string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.24"
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.10"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
